unpackaged/main/default/objects/pse__Assignment_Milestone__c/pse__Assignment_Milestone__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__AssignmentMilestoneHelp</customHelpPage>
    <description>A junction object that stores relationships between assignments and milestones.</description>
    <label>Assignment Milestone</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>