unpackaged/main/default/objects/pse__Assignment_Milestone__c/fields/pse__Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment__c</fullName>
    <description>Master detail relationship to Assignment</description>
    <inlineHelpText>Master detail relationship to Assignment</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Assignment Milestones</relationshipLabel>
    <relationshipName>Assignment_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>