unpackaged/main/default/objects/pse__Assignment_Milestone__c/fields/pse__Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone__c</fullName>
    <description>Master detail relationship to Milestone.</description>
    <inlineHelpText>Master detail relationship to Milestone.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Assignment Milestones</relationshipLabel>
    <relationshipName>Assignment_Milestones</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>