unpackaged/main/default/objects/pse__Assignment_Milestone__c/fields/pse__Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Id__c</fullName>
    <formula>pse__Assignment__r.pse__Resource__c</formula>
    <label>Resource Id</label>
    <type>Text</type>
</CustomField>